# lsoda-cxx-modern

./: .gitignore  CMakeLists.txt  note.txt
include/: lsoda.hpp
test/: test_daxpy.cpp  test_ddot.cpp  test_dgefa.cpp  test_dgefa_dgesl.cpp  test_dscal.cpp  test_idamax.cpp  test_vmnorm_fnorm.cpp
